# pico_tree

./: .gitattributes  .gitignore  CITATION.cff  CMakeLists.txt  COPYING.txt  README.md  setup.py
.github/actions/cmake/: action.yml
.github/workflows/: build-and-test.yml  pip.yml
cmake/: Config.cmake.in  utils.cmake
docs/: benchmark.md
examples/: CMakeLists.txt
examples/benchmark/: CMakeLists.txt  benchmark.cpp  benchmark.hpp  bin_to_ascii.cpp  bm_nanoflann.cpp  bm_opencv_flann.cpp  bm_pico_cover_tree.cpp  bm_pico_kd_tree.cpp  format_ascii.hpp  format_bin.hpp  format_uosr.cpp  format_uosr.hpp  nano_adaptor.hpp  nano_pico.cpp  nano_point_set.hpp  open_stream.hpp  plot_benchmarks.py  uosr_to_bin.cpp
examples/eigen/: CMakeLists.txt  eigen.cpp  eigen_adapter.hpp  eigen_adaptor.hpp  eigen_space_type.cpp
examples/kd_forest/: CMakeLists.txt  kd_forest.cpp  mnist.hpp  sift.hpp
examples/kd_tree/: CMakeLists.txt  kd_tree.cpp  kd_tree_creation.cpp  kd_tree_custom_metric.cpp  kd_tree_custom_point_type.cpp  kd_tree_custom_search_visitor.cpp  kd_tree_custom_space_type.cpp  kd_tree_dynamic_arrays.cpp  kd_tree_minimal.cpp  kd_tree_point_traits.cpp  kd_tree_save_and_load.cpp  kd_tree_search.cpp  kd_tree_traits.cpp
examples/mnist/: CMakeLists.txt  mnist.cpp
examples/nano_pico/: CMakeLists.txt  bin_to_ascii.cpp  format_bin.cpp  format_bin.hpp  format_uosr.cpp  format_uosr.hpp  nano_pico.cpp  nano_point_set.hpp  open_stream.cpp  uosr_to_bin.cpp
examples/opencv/: CMakeLists.txt  opencv.cpp  opencv.hpp  opencv_space_type.cpp
examples/pico_common/: CMakeLists.txt  pico_adaptor.hpp  pico_point_set.hpp  point.hpp  scoped_timer.hpp
examples/pico_toolshed/: CMakeLists.txt
examples/pico_toolshed/pico_toolshed/: dynamic_space.hpp  pico_adaptor.hpp  point.hpp  scoped_timer.hpp
examples/pico_toolshed/pico_toolshed/format/: endian.hpp  format_ascii.hpp  format_bin.hpp  format_mnist.hpp  format_uosr.hpp  format_xvecs.hpp
examples/pico_understory/: CMakeLists.txt
examples/pico_understory/pico_understory/: cover_tree.hpp  kd_forest.hpp  metric.hpp  rkd_tree.hpp
examples/pico_understory/pico_understory/internal/: cover_tree_base.hpp  cover_tree_builder.hpp  cover_tree_data.hpp  cover_tree_node.hpp  cover_tree_search.hpp  eigen3.hpp  kd_tree_priority_search.hpp  matrix_space.hpp  matrix_space_traits.hpp  point_traits.hpp  priority_queue.hpp  rkd_tree_builder.hpp  rkd_tree_hh_data.hpp  rkd_tree_rr_data.hpp  rkd_tree_search.hpp  static_buffer.hpp
examples/python/: CMakeLists.txt  kd_tree.py
examples/range_query/: CMakeLists.txt  range_query.cpp
examples/range_tree/: CMakeLists.txt  range_tree.cpp
src/: CMakeLists.txt  nanotree.hpp
src/nano_tree/: core.hpp  kd_tree.hpp  range_tree.hpp
src/pico_tree/: CMakeLists.txt  core.hpp  eigen.hpp  eigen_adaptor.hpp  kd_tree.hpp  range_tree.hpp
src/pico_tree/pico_tree/: array_traits.hpp  core.hpp  cover_tree.hpp  eigen.hpp  eigen3_traits.hpp  kd_tree.hpp  map.hpp  map_traits.hpp  metric.hpp  opencv.hpp  opencv_traits.hpp  point_traits.hpp  space_traits.hpp  std_traits.hpp  vector_traits.hpp
src/pico_tree/pico_tree/internal/: box.hpp  kd_tree_builder.hpp  kd_tree_data.hpp  kd_tree_node.hpp  kd_tree_search.hpp  memory.hpp  point.hpp  point_wrapper.hpp  search_visitor.hpp  sequence.hpp  space_wrapper.hpp  stream.hpp  stream_wrapper.hpp
src/pyco_tree/: CMakeLists.txt  kd_tree.py  metric.py
src/pyco_tree/_pyco_tree/: CMakeLists.txt  _pyco_tree.cpp  darray.hpp  def_core.cpp  def_core.hpp  def_darray.cpp  def_kd_tree.cpp  kd_tree.hpp
src/pyco_tree/pico_tree/: CMakeLists.txt  __init__.py  kd_tree.py  metric.py
src/pyco_tree/pico_tree/_pyco_tree/: _pyco_tree.cpp  core.hpp  darray.hpp  def_core.hpp  def_darray.cpp  def_darray.hpp  def_kd_tree.cpp  def_kd_tree.hpp  kd_tree.hpp  map.hpp  map_straits.hpp  map_traits.hpp  py_array_map.hpp  pyco_adaptor.hpp
test/: CMakeLists.txt  common.hpp  eigen.cpp  eigen_test.cpp  kd_tree_test.cpp  range_tree_test.cpp
test/pico_tree/: CMakeLists.txt  box_test.cpp  common.hpp  cover_tree_test.cpp  distance_test.cpp  eigen3_traits_test.cpp  eigen_test.cpp  kd_tree_builder_test.cpp  kd_tree_test.cpp  metric_test.cpp  opencv_test.cpp  opencv_traits_test.cpp  point_map_test.cpp  segment_test.cpp  space_map_test.cpp  space_map_traits_test.cpp  std_traits_test.cpp  vector_traits_test.cpp
test/pyco_tree/: CMakeLists.txt  kd_tree_test.py
