add_subdirectory(pico_toolshed)

add_subdirectory(kd_tree)

find_package(Eigen3 QUIET)
if(Eigen3_FOUND)
    add_subdirectory(eigen)
    message(STATUS "Eigen3 found. Building Eigen example.")
else()
    message(STATUS "Eigen3 not found. Eigen example skipped.")
endif()

function(HAS_CXX_COMPILE_FEATURE FEATURE HAS_FEATURE)
    foreach(i ${CMAKE_CXX_COMPILE_FEATURES})
        if(${i} STREQUAL ${FEATURE})
            set(${HAS_FEATURE} TRUE PARENT_SCOPE)
            return()
        endif()
    endforeach()
    set(${HAS_FEATURE} FALSE PARENT_SCOPE)
endfunction()

set(HAS_CPP17_FEATURE FALSE)
has_cxx_compile_feature(cxx_std_17 HAS_CPP17_FEATURE)
find_package(nanoflann QUIET)
find_package(benchmark QUIET)
if(nanoflann_FOUND AND benchmark_FOUND AND HAS_CPP17_FEATURE)
    add_subdirectory(benchmark)
    message(STATUS "nanoflann, benchmark and C++17 found. Building PicoTree benchmark.")
else()
    message(STATUS "nanoflann, benchmark or C++17 not found. PicoTree benchmark skipped.")
endif()

# The Python examples only get copied when the bindings module will be build.
if(TARGET _pyco_tree)
    add_subdirectory(python)
endif()
