add_executable(kd_tree_minimal kd_tree_minimal.cpp)
set_default_target_properties(kd_tree_minimal)
target_link_libraries(kd_tree_minimal PUBLIC PicoTree::PicoTree)

add_executable(kd_tree_traits kd_tree_traits.cpp)
set_default_target_properties(kd_tree_traits)
target_link_libraries(kd_tree_traits PUBLIC PicoTree::PicoTree)

add_executable(kd_tree_search kd_tree_search.cpp)
set_default_target_properties(kd_tree_search)
target_link_libraries(kd_tree_search PUBLIC pico_toolshed)
